authors_pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authors-deployment
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: authors
  template:
    metadata:
      labels:
        app: authors
    spec:
      containers:
        - name: authors-container
          image: orchuk/fastapi-containers-k8s-authors:latest
          ports:
            - containerPort: 8000
