authors_cluster_ip_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authors-service
spec:
  selector:
    app: authors
  ports:
    - protocol: TCP
      port: 80  # Expose the service on port 80.
      targetPort: 8000  # Target port in the pod.
  type: ClusterIP  # Exposes the service internally within the cluster.
