authors_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authors-service
spec:
  selector:
    app: authors
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
