books_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-service
spec:
  selector:
    app: books
  ports:
  - protocol: TCP
    port: 8001
    targetPort: 8001
  type: ClusterIP
