ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: authors-service
                port:
                  number: 8000
          - path: /author
            pathType: Prefix
            backend:
              service:
                name: authors-service
                port:
                  number: 8000
          - path: /books
            pathType: Prefix
            backend:
              service:
                name: books-service
                port:
                  number: 8001
